switched to stm8spl.lib

--- a/fw/Makefile
+++ b/fw/Makefile
@@ -2,8 +2,8 @@ MCU=stm8
 DEVICE=stm8s003?3
 FLASHER=stlinkv2
 CC=sdcc
-CFLAGS=-mstm8 -I. --std-c11
-LFLAGS=-lstm8
+CFLAGS=-m$(MCU) -I. --std-c11 -I../../stm8spl/sysroot/include -DSDCC -DSTM8S003
+LFLAGS=-l$(MCU) -lstm8spl -L../../stm8spl/sysroot/lib/
 
 SRCS:=main.c
 OBJS:=$(SRCS:.c=.rel)
@@ -12,13 +12,13 @@ FW=fw
 all: $(FW)
 
 %.rel: %.c
-	$(CC) -m$(MCU) $(CFLAGS) $<
+	$(CC) $(CFLAGS) -c $<
 
 $(FW): $(OBJS)
-	$(CC) $(LDFLAGS)  -m$(MCU) -o $(FW).ihx $(OBJS)
+	$(CC) -V  $(LFLAGS) -o $(FW).ihx $(OBJS)
 
 flash:
 	stm8flash -c $(FLASHER) -p $(DEVICE) -w $(FW).ihx
 
 clean:
-	@rm -v *.sym *.asm *.lst *.rel *.ihx *lk* *.rst *.cdb *.map
+	@rm -f *.sym *.asm *.lst *.rel *.ihx *lk* *.rst *.cdb *.map
