proper submodule for stm8spl

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "fw/libstm8s"]
-	path = fw/libstm8s
-	url = https://github.com/tymmothy/libstm8s.git
 [submodule "fw/stm8spl"]
 	path = fw/stm8spl
-	url = gitolite@jurets.ru:stm8spl
+	url = ssh://git@jurets.ru:1507/stm8spl
